--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/handicraftsman/electronbot#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
+    "jsdom": "^11.10.0",
     "material-design-lite": "^1.3.0",
     "pegjs": "^0.10.0",
     "pug": "^2.0.3",
